tests/NormalTests/paczka1/small_fuzzy/83843902.err
Error in line 4: S209 A826 63,3
Error in line 10: S209 A486 56,8
Error in line 8: 72zrYIgNwyb S209 48,2
